force-app/main/default/objects/Lead/fields/AdSourceUrl__c.field-meta.xml
<CustomField>
    <fullName>AdSourceUrl__c</fullName>
    <description
  >URL do anúncio Meta de origem do Lead (source_url do referral do webhook). Rastreabilidade da campanha Click-to-WhatsApp.</description>
    <label>Ad Source URL</label>
    <type>Url</type>
</CustomField>