force-app/main/default/objects/Lead/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>