force-app/main/default/objects/Lead/fields/ConsultantGraduation__c.field-meta.xml
<CustomField>
    <fullName>ConsultantGraduation__c</fullName>
    <label>Grau do Consultor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>