force-app/main/default/objects/Lead/fields/ConsultorRegional__c.field-meta.xml
<CustomField>
    <fullName>ConsultorRegional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor regional</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Leads (Consultor regional)</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>