force-app/main/default/objects/Lead/fields/CPFCNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPFCNPJ__c</fullName>
    <label>CPF/CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>