force-app/main/default/objects/Lead/fields/CtwaClid__c.field-meta.xml
<CustomField>
    <fullName>CtwaClid__c</fullName>
    <description
  >Click-to-WhatsApp Click ID enviado pelo Meta no referral do webhook. Usado para correlacionar o Lead com a campanha de origem via CAPI.</description>
    <label>CTWA Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>