force-app/main/default/objects/Lead/fields/CustoEnergiaMes__c.field-meta.xml
<CustomField>
    <fullName>CustoEnergiaMes__c</fullName>
    <label>Custo de energia por mês</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>até R$ 300</fullName>
            </value>
            <value>
                <fullName>até R$ 300 a R$ 500</fullName>
            </value>
            <value>
                <fullName>de R$ 500 a R$ 1.000</fullName>
            </value>
            <value>
                <fullName>mais de R$ 1.000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>