force-app/main/default/objects/Lead/fields/Distributiontype__c.field-meta.xml
<CustomField>
    <fullName>Distributiontype__c</fullName>
    <label>Tipo de Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Graduação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>