force-app/main/default/objects/Lead/fields/DistributionValue__c.field-meta.xml
<CustomField>
    <fullName>DistributionValue__c</fullName>
    <label>Valores de Distribuição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>