force-app/main/default/objects/Lead/fields/EmailConsultor__c.field-meta.xml
<CustomField>
    <fullName>EmailConsultor__c</fullName>
    <label>Email do Consultor</label>
    <type>Email</type>
</CustomField>