force-app/main/default/objects/Lead/fields/ErrorIntegracaoVO__c.field-meta.xml
<CustomField>
    <fullName>ErrorIntegracaoVO__c</fullName>
    <label>Erro Integração VO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>