force-app/main/default/objects/Lead/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>