force-app/main/default/objects/Lead/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>