force-app/main/default/objects/Lead/fields/FalarComAgente__c.field-meta.xml
<CustomField>
    <fullName>FalarComAgente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Falar com o agente</label>
    <type>Checkbox</type>
</CustomField>