force-app/main/default/objects/Lead/fields/First_Touch_Ad__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primeiro Anúncio de Origem</label>
    <referenceTo>Meta_Ad__c</referenceTo>
    <relationshipLabel>Leads First Touch</relationshipLabel>
    <relationshipName>Leads_First_Touch</relationshipName>
    <type>Lookup</type>
</CustomField>