force-app/main/default/objects/Lead/fields/First_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Date__c</fullName>
    <label>Data do Primeiro Toque</label>
    <type>DateTime</type>
</CustomField>