force-app/main/default/objects/Lead/fields/IdVirtualOffice__c.field-meta.xml
<CustomField>
    <fullName>IdVirtualOffice__c</fullName>
    <label>Id no Virtual Office</label>
    <length>90</length>
    <type>Text</type>
</CustomField>