force-app/main/default/objects/Lead/fields/IndicadoPor__c.field-meta.xml
<CustomField>
    <fullName>IndicadoPor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicado por</label>
    <referenceTo>Consultor__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>