force-app/main/default/objects/Lead/fields/IntegracaoDistribuicaoLeadDataHora__c.field-meta.xml
<CustomField>
    <fullName>IntegracaoDistribuicaoLeadDataHora__c</fullName>
    <label>Data/Hora Última Integração Distribuição</label>
    <type>DateTime</type>
</CustomField>