force-app/main/default/objects/Lead/fields/IntegracaoDistribuicaoLeadErro__c.field-meta.xml
<CustomField>
    <fullName>IntegracaoDistribuicaoLeadErro__c</fullName>
    <label>Erro Última Integração Distribuição</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>