force-app/main/default/objects/Lead/fields/InteresseEnergiaRenovavel__c.field-meta.xml
<CustomField>
    <fullName>InteresseEnergiaRenovavel__c</fullName>
    <label>Interesse em outras soluções de energia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armazenamento de energia (baterias)</fullName>
            </value>
            <value>
                <fullName>Carregadores para carros elétricos</fullName>
            </value>
            <value>
                <fullName>Automação residencial (casa inteligente)</fullName>
            </value>
            <value>
                <fullName>Todas as opções</fullName>
            </value>
            <value>
                <fullName>Por enquanto, não!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>