force-app/main/default/objects/Lead/fields/InteresseEnergiaSolar__c.field-meta.xml
<CustomField>
    <fullName>InteresseEnergiaSolar__c</fullName>
    <label>Você tem interesse em energia solar para</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minha casa</fullName>
            </value>
            <value>
                <fullName>Minha empresa</fullName>
            </value>
            <value>
                <fullName>Para os dois</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>