force-app/main/default/objects/Lead/fields/KwPlano__c.field-meta.xml
<CustomField>
    <fullName>KwPlano__c</fullName>
    <label>Potência Nominal do Sistema</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>