force-app/main/default/objects/Lead/fields/Lab065_IntegracaoDistribuicaoLead__c.field-meta.xml
<CustomField>
    <fullName>Lab065_IntegracaoDistribuicaoLead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integração Distribuição Lead</label>
    <type>Checkbox</type>
</CustomField>