force-app/main/default/objects/Lead/fields/Last_Touch_Ad__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Último Anúncio de Origem</label>
    <referenceTo>Meta_Ad__c</referenceTo>
    <relationshipLabel>Leads Last Touch</relationshipLabel>
    <relationshipName>Leads_Last_Touch</relationshipName>
    <type>Lookup</type>
</CustomField>