force-app/main/default/objects/Lead/fields/Lb065_Estado__c.field-meta.xml
<CustomField>
    <fullName>Lb065_Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>DF</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RJ</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>Acre AC</fullName>
                <isActive>false</isActive>
                <label>Acre AC</label>
            </value>
            <value>
                <fullName>Alagoas AL</fullName>
                <isActive>false</isActive>
                <label>Alagoas AL</label>
            </value>
            <value>
                <fullName>Amapá AP</fullName>
                <isActive>false</isActive>
                <label>Amapá AP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>