force-app/main/default/objects/Lead/fields/Lb065_FaturaEnergia__c.field-meta.xml
<CustomField>
    <fullName>Lb065_FaturaEnergia__c</fullName>
    <label>Valor da Fatura de Energia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>