force-app/main/default/objects/Lead/fields/Lb065_HistoricoLead__c.field-meta.xml
<CustomField>
    <fullName>Lb065_HistoricoLead__c</fullName>
    <label>Histórico Lead</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>