force-app/main/default/objects/Lead/fields/Lb065_LeadStatusChange__c.field-meta.xml
<CustomField>
    <fullName>Lb065_LeadStatusChange__c</fullName>
    <formula>IF(
  ISBLANK( Lb065_StatusUltimaAlteracao__c ),
  DATEVALUE(CreatedDate),
  Lb065_StatusUltimaAlteracao__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Status Change</label>
    <type>Date</type>
</CustomField>