force-app/main/default/objects/Lead/fields/Lb065_LeadVencido__c.field-meta.xml
<CustomField>
    <fullName>Lb065_LeadVencido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Vencido</label>
    <type>Checkbox</type>
</CustomField>