force-app/main/default/objects/Lead/fields/Lb065_PontuacaoFatura__c.field-meta.xml
<CustomField>
    <fullName>Lb065_PontuacaoFatura__c</fullName>
    <label>Pontuação por Fatura de Energia</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>