force-app/main/default/objects/Lead/fields/Lb065_PontuacaoOrigem__c.field-meta.xml
<CustomField>
    <fullName>Lb065_PontuacaoOrigem__c</fullName>
    <label>Pontuação por Origem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>