force-app/main/default/objects/Lead/fields/Lb065_PontuacaoTotal__c.field-meta.xml
<CustomField>
    <fullName>Lb065_PontuacaoTotal__c</fullName>
    <formula>Lb065_PontuacaoFatura__c + Lb065_PontuacaoOrigem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>