force-app/main/default/objects/Lead/fields/Lb065_ProdutoInteresse__c.field-meta.xml
<CustomField>
    <fullName>Lb065_ProdutoInteresse__c</fullName>
    <label>Produto de interesse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Ezee Solar</fullName>
            </value>
            <value>
                <fullName>Ezee Connect</fullName>
            </value>
            <value>
                <fullName>Ezee Livre</fullName>
            </value>
            <value>
                <fullName>Produtos</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
            <value>
                <fullName>Baterias</fullName>
            </value>
            <value>
                <fullName>Carregador veicular</fullName>
            </value>
            <value>
                <fullName>Interesse genérico em energia solar</fullName>
            </value>
            <value>
                <fullName>Não indicou ou não soube informar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>