force-app/main/default/objects/Lead/fields/Lb065_StatusUltimaAlteracao__c.field-meta.xml
<CustomField>
    <fullName>Lb065_StatusUltimaAlteracao__c</fullName>
    <label>Status Ultima Alteracao</label>
    <type>Date</type>
</CustomField>