force-app/main/default/objects/Lead/fields/LeadRegion__c.field-meta.xml
<CustomField>
    <fullName>LeadRegion__c</fullName>
    <formula>CASE(
    State,
    &quot;AC&quot;, &quot;Norte&quot;,
    &quot;AP&quot;, &quot;Norte&quot;,
    &quot;AM&quot;, &quot;Norte&quot;,
    &quot;PA&quot;, &quot;Norte&quot;,
    &quot;RO&quot;, &quot;Norte&quot;,
    &quot;RR&quot;, &quot;Norte&quot;,
    &quot;TO&quot;, &quot;Norte&quot;,

    &quot;AL&quot;, &quot;Nordeste&quot;,
    &quot;BA&quot;, &quot;Nordeste&quot;,
    &quot;CE&quot;, &quot;Nordeste&quot;,
    &quot;MA&quot;, &quot;Nordeste&quot;,
    &quot;PB&quot;, &quot;Nordeste&quot;,
    &quot;PE&quot;, &quot;Nordeste&quot;,
    &quot;PI&quot;, &quot;Nordeste&quot;,
    &quot;RN&quot;, &quot;Nordeste&quot;,
    &quot;SE&quot;, &quot;Nordeste&quot;,

    &quot;DF&quot;, &quot;Centro-Oeste&quot;,
    &quot;GO&quot;, &quot;Centro-Oeste&quot;,
    &quot;MT&quot;, &quot;Centro-Oeste&quot;,
    &quot;MS&quot;, &quot;Centro-Oeste&quot;,

    &quot;ES&quot;, &quot;Sudeste&quot;,
    &quot;MG&quot;, &quot;Sudeste&quot;,
    &quot;RJ&quot;, &quot;Sudeste&quot;,
    &quot;SP&quot;, &quot;Sudeste&quot;,

    &quot;PR&quot;, &quot;Sul&quot;,
    &quot;RS&quot;, &quot;Sul&quot;,
    &quot;SC&quot;, &quot;Sul&quot;,

    &quot;Desconhecido&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Região do Lead</label>
    <type>Text</type>
</CustomField>