force-app/main/default/objects/Lead/fields/Meta_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad_ID__c</fullName>
    <label>ID do Anúncio Meta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>