force-app/main/default/objects/Lead/fields/Meta_AdSet_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_AdSet_ID__c</fullName>
    <label>ID do Conjunto de Anúncios Meta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>