force-app/main/default/objects/Lead/fields/Meta_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Meta_Campaign_ID__c</fullName>
    <label>ID da Campanha Meta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>