force-app/main/default/objects/Lead/fields/Meta_CTWA_CLID__c.field-meta.xml
<CustomField>
    <fullName>Meta_CTWA_CLID__c</fullName>
    <description
  >Click-to-WhatsApp Click ID normalizado para atribuição e CAPI futuro.</description>
    <label>CLID CTWA Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>