force-app/main/default/objects/Lead/fields/MetaLead__c.field-meta.xml
<CustomField>
    <fullName>MetaLead__c</fullName>
    <label>Lead Meta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>