force-app/main/default/objects/Lead/fields/Nome_da_Campanha_Meta__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Campanha_Meta__c</fullName>
    <label>Nome da Campanha</label>
    <length>255</length>
    <type>Text</type>
</CustomField>