force-app/main/default/objects/Lead/fields/Nome_do_An_ncio_Meta__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_An_ncio_Meta__c</fullName>
    <label>Nome do Anúncio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>