force-app/main/default/objects/Lead/fields/Nome_do_Conjunto_de_An_ncios_Meta__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Conjunto_de_An_ncios_Meta__c</fullName>
    <label>Nome do Conjunto de Anúncios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>