force-app/main/default/objects/Lead/fields/Nome_do_Formul_rio__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Formul_rio__c</fullName>
    <label>Nome do Formulário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>