force-app/main/default/objects/Lead/fields/NomeConsultor__c.field-meta.xml
<CustomField>
    <fullName>NomeConsultor__c</fullName>
    <formula>ConsultorRegional__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Consultor</label>
    <type>Text</type>
</CustomField>