force-app/main/default/objects/Lead/fields/NotFinishMessaging__c.field-meta.xml
<CustomField>
    <fullName>NotFinishMessaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Finalizou a Conversa</label>
    <type>Checkbox</type>
</CustomField>