force-app/main/default/objects/Lead/fields/ObservationAplication__c.field-meta.xml
<CustomField>
    <fullName>ObservationAplication__c</fullName>
    <label>Observação Aplicativo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>