force-app/main/default/objects/Lead/fields/Origem_do_Tr_fego__c.field-meta.xml
<CustomField>
    <fullName>Origem_do_Tr_fego__c</fullName>
    <description>Nome que representa a fonte (Facebook, Instagram, Audience Network).</description>
    <label>Origem do Tráfego</label>
    <length>255</length>
    <type>Text</type>
</CustomField>