force-app/main/default/objects/Lead/fields/OtherReason__c.field-meta.xml
<CustomField>
    <fullName>OtherReason__c</fullName>
    <label>Outro Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>