force-app/main/default/objects/Lead/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <label>Plano</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>Ezee Solar</fullName>
            </value>
            <value>
                <fullName>Integrador</fullName>
            </value>
            <value>
                <fullName>Ezee Connect</fullName>
            </value>
            <value>
                <fullName>Ezee Livre</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>BusinessPlus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>