force-app/main/default/objects/Lead/fields/Quem_Indicou__c.field-meta.xml
<CustomField>
    <fullName>Quem_Indicou__c</fullName>
    <label>Quem Indicou</label>
    <length>255</length>
    <type>Text</type>
</CustomField>