force-app/main/default/objects/Lead/fields/ReasonNotConverted__c.field-meta.xml
<CustomField>
    <fullName>ReasonNotConverted__c</fullName>
    <label>Motivo Não Convertido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Alto investimento</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Restrições cadastrais ou de crédito</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Comparando propostas</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Intenção de compra futura</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Outros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>