force-app/main/default/objects/Lead/fields/SDRAgent__c.field-meta.xml
<CustomField>
    <fullName>SDRAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agente SDR</label>
    <type>Checkbox</type>
</CustomField>