force-app/main/default/objects/Lead/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Finalizado (Fechado)</fullName>
            </value>
            <value>
                <fullName>Consultor Aprovado</fullName>
            </value>
            <value>
                <fullName>Consultor Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>