force-app/main/default/objects/Lead/fields/StatusBodyIntegracaoNivello__c.field-meta.xml
<CustomField>
    <fullName>StatusBodyIntegracaoNivello__c</fullName>
    <label>Status Body Integração Nivello</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>