force-app/main/default/objects/Lead/fields/StatusBodyIntegracaoVO__c.field-meta.xml
<CustomField>
    <fullName>StatusBodyIntegracaoVO__c</fullName>
    <label>Status Body Integração VO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>