force-app/main/default/objects/Lead/fields/StatusJustification__c.field-meta.xml
<CustomField>
    <fullName>StatusJustification__c</fullName>
    <label>Justificação do Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>