force-app/main/default/objects/Lead/fields/StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>StreetNumber__c</fullName>
    <label>Numero</label>
    <length>5</length>
    <type>Text</type>
</CustomField>