force-app/main/default/objects/Lead/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não Convertido</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>