force-app/main/default/objects/Lead/fields/SucessoIntegracaoNivello__c.field-meta.xml
<CustomField>
    <fullName>SucessoIntegracaoNivello__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sucesso Integração Nivello</label>
    <type>Checkbox</type>
</CustomField>